force-app/main/default/objects/MaBVRechnungMaster__c/MaBVRechnungMaster__c.object-meta.xml
<CustomObject>
    <label>MaBV Rechnung Master</label>
    <nameField>
        <displayFormat>MaBV-Master-{YYYY}-{00000}</displayFormat>
        <label>MaBV Rechnung Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MaBV Rechnungen Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>