force-app/main/default/objects/MaBVRechnungMaster__c/fields/AnzahlRechnungen__c.field-meta.xml
<CustomField>
    <fullName>AnzahlRechnungen__c</fullName>
    <label>Anzahl Rechnungen</label>
    <summaryForeignKey>MaBVRechnung__c.MaBVRechnungMaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>