force-app/main/default/objects/MaBVRechnungMaster__c/fields/Faelligkeitsdatum__c.field-meta.xml
<CustomField>
    <fullName>Faelligkeitsdatum__c</fullName>
    <label>Fälligkeitsdatum</label>
    <type>Date</type>
</CustomField>