force-app/main/default/objects/MaBVRechnungMaster__c/fields/IDKunde__c.field-meta.xml
<CustomField>
    <fullName>IDKunde__c</fullName>
    <formula>Opportunity__r.Potenzieller_Kunde__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Kunde</label>
    <type>Text</type>
</CustomField>