force-app/main/default/objects/MaBVRechnungMaster__c/fields/Laufnummer__c.field-meta.xml
<CustomField>
    <fullName>Laufnummer__c</fullName>
    <label>Laufnummer</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>