force-app/main/default/objects/MaBVRechnungMaster__c/fields/MaBVRate__c.field-meta.xml
<CustomField>
    <fullName>MaBVRate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MaBV Rate</label>
    <referenceTo>MaBVRate__c</referenceTo>
    <relationshipLabel>MaBV Rechnungen Master</relationshipLabel>
    <relationshipName>MaBV_Rechnungen</relationshipName>
    <type>Lookup</type>
</CustomField>