force-app/main/default/objects/MaBVRechnungMaster__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verkaufschance</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MaBV Rechnungen Master</relationshipLabel>
    <relationshipName>MaBV_Rechnungen</relationshipName>
    <type>Lookup</type>
</CustomField>