force-app/main/default/objects/MaBVRechnungMaster__c/fields/RateGesamtInEur__c.field-meta.xml
<CustomField>
    <fullName>RateGesamtInEur__c</fullName>
    <formula>RateInEur__c + SicherheitPlusInEur__c - SicherheitseinbehaltInEur__c + PreisanpassungInEuro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate gesamt in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>