force-app/main/default/objects/MaBVRechnungMaster__c/fields/RateInEur__c.field-meta.xml
<CustomField>
    <fullName>RateInEur__c</fullName>
    <formula>(Opportunity__r.beurkundeter_Kaufpreis__c * MaBVRate__r.RateInPercentage__c)</formula>
    <label>Rate in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>