force-app/main/default/objects/MaBVRechnungMaster__c/fields/Rechnungsdatum__c.field-meta.xml
<CustomField>
    <fullName>Rechnungsdatum__c</fullName>
    <label>Rechnungsdatum</label>
    <type>Date</type>
</CustomField>