force-app/main/default/objects/MaBVRechnungMaster__c/fields/Rechnungsnummer__c.field-meta.xml
<CustomField>
    <fullName>Rechnungsnummer__c</fullName>
    <formula>MaBVRate__r.Immobilie__r.Objektnummer__c + &apos; &apos; + &apos;Wohnungseinheit&apos; + &apos; &apos; +  LPAD(TEXT( Laufnummer__c ), 5, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rechnungsnummer</label>
    <type>Text</type>
</CustomField>