force-app/main/default/objects/MaBVRechnungMaster__c/fields/RechnungWurdeAusgeloest__c.field-meta.xml
<CustomField>
    <fullName>RechnungWurdeAusgeloest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechnung wurde ausgelöst</label>
    <type>Checkbox</type>
</CustomField>