force-app/main/default/objects/MaBVRechnungMaster__c/fields/RechnungWurdeStorniert__c.field-meta.xml
<CustomField>
    <fullName>RechnungWurdeStorniert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechnung wurde storniert</label>
    <type>Checkbox</type>
</CustomField>