force-app/main/default/objects/MaBVRechnungMaster__c/fields/SicherheitPlusInEur__c.field-meta.xml
<CustomField>
    <fullName>SicherheitPlusInEur__c</fullName>
    <formula>MaBVRate__r.SicherheitPlusInPercentage__c *  Opportunity__r.beurkundeter_Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sicherheit (plus) in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>