force-app/main/default/objects/MaBVRechnungMaster__c/fields/SicherheitseinbehaltInEur__c.field-meta.xml
<CustomField>
    <fullName>SicherheitseinbehaltInEur__c</fullName>
    <formula>Opportunity__r.beurkundeter_Kaufpreis__c * (MaBVRate__r.SicherheitseinbehaltInPercentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sicherheitseinbehalt in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>